--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sakana! - 石蒜虚拟器 - 神奇海螺试验场</title>
-    <meta name="description" content="Lycoris Recoil,リコリス・リコイル,莉可丽丝,石蒜虚拟器,锦木千束,錦木千束,井之上泷奈,井ノ上たきな,神奇海螺试验场">
+    <title>波莉Pori虚拟器</title>
+    <meta name="description" content="关注波莉咩，关注波莉谢谢咩">
     <link rel="stylesheet" href="document.css">
-    <link rel="apple-touch-icon" href="sakana.png">
-    <link rel="prefetch" href="chisato.png">
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
 </head>
 <body>
     <div class="app">
@@ -23,17 +23,13 @@
         <a class="trigger-magic-link" onclick="triggerMagic()"></a>
     </div>
     <footer>
-        <a href="/" target="_blank">lab</a>
-        <a href="https://weibo.com/1197780522/M2xbREtGI" target="_blank">微博</a>
-        <a href="https://github.com/itorr/sakana" target="_blank">GitHub</a>
-        <a href="https://twitter.com/blue00f4/status/1551887529615687680" target="_blank">
-            <span>绘</span>
-            大伏アオ
+        <a href="https://space.bilibili.com/1685553399" target="_blank">ファルコンハヤキ</a>
+        <a href="https://github.com/falcon-hayaki/pori" target="_blank">GitHub</a>
+        <a href="https://space.bilibili.com/1685553399" target="_blank">
+            <span>主播</span>
+            波莉Pori
         </a>
-        <a href="https://weibo.com/reiove" target="_blank">
-            <span>程序</span>
-            卜卜口
-        </a>
+        <a href="https://space.bilibili.com/1685553399" target="_blank">关注波莉咩，关注波莉谢谢咩</a>
     </footer>
     <!-- <pre id="out"></pre> -->
     <script src="document.js"></script>
