--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,10 @@
         <a class="trigger-magic-link" onclick="triggerMagic()"></a>
     </div>
     <footer>
+        <a href="https://weibo.com/reiove" target="_blank">
+            <span>感谢</span>
+            トトロ
+        </a>
         <a href="https://space.bilibili.com/1685553399" target="_blank">ファルコンハヤキ</a>
         <a href="https://github.com/falcon-hayaki/pori" target="_blank">GitHub</a>
         <a href="https://space.bilibili.com/1685553399" target="_blank">
